2009-03-20  Jason Rennie

	* release 1.48
	* fix handling of WNSEARCHDIR

2009-03-14  Danny Brian

	* added the ability for new() to take a named param list
	* added a new() param "noload" to not preload index files, but to
	instead use Search::Dict lookups thereafter
	* added _getIndexFH() and _getDataFH() to consolidate opening and
	caching of filehandles
	* added _dataLookup() to consolidate reads from data files
	* added _indexLookup() to consolidate reads from index files
	* added _indexOffsetLookup() to consolidate offset reads from index
	files
	* added _parseIndexLine() to consolidate the parsing of index file lines
	* moved path data to new(), so that everything reads off of $self->{dir}
	* removed the cntlinst path special-casing
	* all file opens are deferred until necessary; for noload this means as
	long as possible, for caching it means during the constructor (see
	_get*FH() functions)
	* documented "noload" option
	* loop tests again for "noload"
	* cleaned up formatting

2008-01-08  Jason Rennie

	* release 1.47
	* QueryData.pm: documentation fix

2007-05-06  Jason Rennie

	* release 1.46
	* QueryData.pm (version): removed (Invalid as of WN 3.0)
	* test.pm: remove tests for pre-3.0 WN; update tests for WN 3.0
	* README, QueryData.pm: update documentation of WN version to 3.0
	* Makefile.PL: update default WN paths

2006-10-16  Jason Rennie

	* release 1.45
	* QueryData.pm (_initialize): move errorString and errorVal
	initialization here (so that variables are specific to each
	instantiation of the module)
	* QueryData.pm (getResetError): return error information, reset
	error variables
	* QueryData.pm (offset): update to use error variables via $self
	* test.pm: test error handling for offset function

2006-10-16  Jason Rennie

	* release 1.44
	* QueryData.pm: add "use vars" for new variables
	* QueryData.pm (offset): fix syntax error

2006-10-15  Jason Rennie

	* release 1.43
	* QueryData.pm (offset): add error handling