@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         WordNet-QueryData
-version:      1.48
+version:      1.49
 version_from: 
 installdirs:  site
 requires:
