@@ -1,3 +1,7 @@
+2009-10-27  Jason Rennie
+
+	* README: update WNHOME/WNSEARCHDIR doc w/ Debian/Ubuntu tip
+
 2009-03-20  Jason Rennie
 
 	* release 1.48
